review-app/manifestos/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.37.0 (fb0539e64)
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: FIRESTORE_EMULATOR_HOST
              value: firestore-emulator.review-app.svc.cluster.local:8080
            - name: GOOGLE_APPLICATION_CREDENTIALS
              value: /dev/null
            - name: GOOGLE_CLOUD_PROJECT
              value: test-project
          image: silvemerson/review-app-backend:latest
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:8080/actuator/health
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: appvamosla-backend
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
